SERVER-79327 Check authorization in refine collection shard key