src/mongo/db/s/shardsvr_refine_collection_shard_key_command.cpp
@@ -85,7 +85,13 @@ public:
             return true;
         }
 
-        void doCheckAuthorization(OperationContext*) const override {}
+        void doCheckAuthorization(OperationContext* opCtx) const override {
+            uassert(ErrorCodes::Unauthorized,
+                    "Unauthorized",
+                    AuthorizationSession::get(opCtx->getClient())
+                        ->isAuthorizedForActionsOnResource(ResourcePattern::forClusterResource(),
+                                                           ActionType::internal));
+        }
 
         /**
          * The ns() for when Request's IDL specifies "namespace: concatenate_with_db".
